--- a/app/src/main/res/layout/fragment_login_system.xml
+++ b/app/src/main/res/layout/fragment_login_system.xml
@@ -21,16 +21,16 @@
         app:layout_constraintVertical_bias="0.185" />
 
     <Button
-        android:id="@+id/login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/loginBut"
+        android:layout_width="206dp"
+        android:layout_height="51dp"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextText2"
-        app:layout_constraintVertical_bias="0.141" />
+        app:layout_constraintVertical_bias="0.119" />
 
     <EditText
         android:id="@+id/editTextText2"
