--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.example.verb.ui.gallery.GalleryFragment"
+        android:name="com.example.verb.ui.gallery.FriendsFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_friends" />
 
