--- a/app/src/main/res/layout/fragment_sing_up.xml
+++ b/app/src/main/res/layout/fragment_sing_up.xml
@@ -37,8 +37,8 @@
         android:layout_width="210dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="text"
-        android:text="Password"
+        android:inputType="textPassword"
+        android:hint="Password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -51,8 +51,8 @@
         android:layout_width="210dp"
         android:layout_height="49dp"
         android:ems="10"
-        android:inputType="text"
-        android:text="Confirm password"
+        android:inputType="textPassword"
+        android:hint="Confirm password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
